force-app/main/default/objects/CTRNews__c.object
<CustomObject>
    <fields>
        <fullName>Content__c</fullName>
        <label>Content</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CTR News</relationshipLabel>
        <relationshipName>CTR_News</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date (วันที่ของข่าว)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Headline__c</fullName>
        <label>Headline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <externalId>true</externalId>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Keyword__c</fullName>
        <label>Keyword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EN</fullName>
                </value>
                <value>
                    <fullName>TH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>CTR News</relationshipLabel>
        <relationshipName>CTRNews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestFormHeader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request Form Header</label>
        <referenceTo>CTRRequestFormHeader__c</referenceTo>
        <relationshipLabel>CTR News</relationshipLabel>
        <relationshipName>CTR_News</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shareholder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shareholder</label>
        <referenceTo>CTRShareholder__c</referenceTo>
        <relationshipLabel>CTR News</relationshipLabel>
        <relationshipName>CTRNews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SourceURL__c</fullName>
        <label>Source URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source (แหล่งข่าว)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CTR News</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Create New Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>